# unifat

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: codec.rs  mount.rs  ops.rs  write.rs
src/: attrs.rs  boot.rs  dir.rs  entry_times.rs  error.rs  file.rs  fuzz.rs  handles.rs  lib.rs  log_macros.rs  mbr.rs  name.rs  options.rs  path.rs  time.rs  volume.rs
src/codec/: mod.rs  time.rs
src/codec/exfat/: boot.rs  consts.rs  mod.rs  raw_entry.rs
src/codec/fat/: bpb.rs  dir_entry.rs  entry_time.rs  fat_entry.rs  lfn.rs  mod.rs  sector.rs  sfn_layout.rs  types.rs
src/exfat/: bitmap.rs  cluster_map.rs  compose.rs  create.rs  data_store.rs  dir_io.rs  dir_slot.rs  directory.rs  direntry.rs  fat_io.rs  mod.rs  open.rs  readdir.rs  resolve.rs  timestamp.rs  upcase.rs  vfs.rs
src/fat/: cluster_map.rs  data_store.rs  dir_slot.rs  dir_slots.rs  directory.rs  entry_io.rs  fat_types.rs  fs.rs  mod.rs  open.rs  sector_io.rs  sfn.rs  vfs.rs
src/fat/direntry/: mod.rs  public.rs  raw.rs  ser_de.rs
src/store/: cache.rs  mem.rs  mod.rs
src/vfs/: backend.rs  cluster_map.rs  data_store.rs  dir_slot.rs  directory.rs  engine.rs  mod.rs  path_ops.rs  stream.rs
tests/: exfat_rw.rs  fat32.rs  fat_read.rs  fault.rs  mbr.rs  suite.rs
tests/common/: mod.rs
tests/fixtures/: exfat-1m.img  exfat-mc-3m.img  fat16-3m.img
