[package]
name = "unifat-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.unifat]
path = ".."
features = ["__fuzz"]

# Fuzz targets want release-with-debug and overflow checks on.
[profile.release]
debug = 1
overflow-checks = true

[[bin]]
name = "mount"
path = "fuzz_targets/mount.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ops"
path = "fuzz_targets/ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "codec"
path = "fuzz_targets/codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write"
path = "fuzz_targets/write.rs"
test = false
doc = false
bench = false
